# metadata-repository-svc

./: Dockerfile  README.md  config_schema.json  openapi.yaml  setup.cfg
.devcontainer/: .dev_config.yaml  dev_launcher  devcontainer.json  docker-compose.yml
.github/workflows/: dev_cd.yaml
metadata_repository_service/: __init__.py  __main__.py  config.py  creation_models.py  models.py  patch_models.py  summary_models.py
metadata_repository_service/api/: deps.py  main.py
metadata_repository_service/api/routers/: __init__.py  analyses.py  analysis_processes.py  biospecimens.py  data_access_committees.py  data_access_policies.py  dataset_summary.py  datasets.py  experiment_processes.py  experiments.py  files.py  individuals.py  members.py  metadata_summary.py  projects.py  protocols.py  publications.py  samples.py  studies.py  submissions.py  technologies.py  workflows.py
metadata_repository_service/core/: utils.py
metadata_repository_service/dao/: analysis.py  analysis_process.py  biospecimen.py  data_access_committee.py  data_access_policy.py  dataset.py  dataset_embedded.py  dataset_summary.py  db.py  experiment.py  experiment_process.py  file.py  individual.py  member.py  metadata_summary.py  project.py  protocol.py  publication.py  sample.py  study.py  submission.py  technology.py  utils.py  workflow.py
scripts/: dump_metadata_store.py  populate_embedded_summary_datasets.py  populate_metadata_store.py  submission.py
tests/fixtures/: mongodb.py
tests/integration/: test_api.py  test_dataset_creation.py  test_dataset_embedded.py  test_submission.py
