# Copyright 2021 - 2023 Universität Tübingen, DKFZ, EMBL, and Universität zu Köln
# for the German Human Genome-Phenome Archive (GHGA)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = metadata_repository_service
version = attr: metadata_repository_service.__version__
description = Metadata Repository Service
url = https://github.com/ghga-de/metadata-repository-service
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = German Human Genome Phenome Archive (GHGA)
author_email = contact@ghga.de
license = Apache 2.0
classifiers =
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    anyio==3.6.2
    certifi==2023.5.7
    charset-normalizer==2.1.1
    click==8.1.3
    dnspython==2.3.0
    fastapi==0.89.1
    ghga-service-chassis-lib==0.17.6
    h11==0.14.0
    httptools==0.5.0
    httpyexpect==0.2.4
    idna==3.4
    motor==3.1.1
    pydantic==1.10.4
    pymongo==4.3.3
    python-dotenv==1.0.0
    PyYAML==6.0
    requests==2.28.1
    sniffio==1.3.0
    starlette==0.22.0
    stringcase==1.2.0
    typer==0.7.0
    typing_extensions==4.5.0
    urllib3==1.26.15
    uvicorn==0.20.0
    uvloop==0.17.0
    watchfiles==0.19.0
    websockets==11.0.3
python_requires = >= 3.9

[options.entry_points]
console_scripts =
    metadata-repository-service = metadata_repository_service.__main__:run

[options.extras_require]
dev =
    ghga-service-chassis-lib[dev]==0.17.6
    nest-asyncio
all =
    %(dev)s

[options.packages.find]
exclude = tests
